Coverity analysis defect 155003: Data race condition

XMLWordPrintableJSON

    • Networking & Observability
    • Fully Compatible
    • ALL
    • v8.2, v8.1, v8.0, v7.0, v6.0
    • N&O 2025-08-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /data/mci/76c3f54a72fd69f47896950028d12866/bazel_cache/a66e96dcfafe8eff7b8a4acdb22a1846/execroot/_main/src/mongo/db/process_health/fault_facet_impl.cpp:71: MISSING_LOCK 155003 Accessing "this->_description" without holding lock "mongo::process_health::FaultFacetImpl._mutex". Elsewhere, "mongo::process_health::FaultFacetImpl._description" is written to with "FaultFacetImpl._mutex" held 1 out of 1 times.

            Assignee:
            Amirsaman Memaripour
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: