SERVER-108723 Synchronize before reading from `FaultFacet` (#39661) (#40561)

GitOrigin-RevId: 777a65940224a278cb70169e5a67573d88e94cfd